@@ -2672,7 +2672,7 @@ rawRead(char *p, int size, int n, Rbyte *bytes, int nbytes, int *np)
 {
     int avail, m;
 
-    avail = nbytes/size;
+    avail = (nbytes - *np)/size;
     m = n;
     if (m > avail) m = avail;
     if (m > 0) {
